<resources>
    <string name="app_name">challenge_chapter5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Detail</string>
    <string name="welcome">Welcome,</string>
    <string name="login">Login</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="profile">Profile</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_passowrd">Masukkan Passowrd</string>
    <string name="konfirmasi_passowrd">Konfirmasi Passowrd</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="daftar">Daftar</string>
    <string name="ini_splash_screen">INI SPLASH SCREEN</string>
    <string-array name="languages">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>
</resources>